--- a/index.html
+++ b/index.html
@@ -11,31 +11,66 @@
     </head>
     <body>
         <header>
-            <nav>
-                <img id="eye" src="images/eye.png" alt="there was my logo">
+            <nav id="head">
+                <img id="eye" src="images/eye.png" height= "100px" width="131px" alt="there was my logo">
                 <ul>
-                    <li><h1 class="title">ANDOR PROJECT</h1></li>
-                    <li><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-smart-home" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <li class="title"><strong>ANDOR PROJECT</strong></li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-smart-home" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <path d="M19 8.71l-5.333 -4.148a2.666 2.666 0 0 0 -3.274 0l-5.334 4.148a2.665 2.665 0 0 0 -1.029 2.105v7.2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-7.2c0 -.823 -.38 -1.6 -1.03 -2.105" />
-                        <path d="M16 15c-2.21 1.333 -5.792 1.333 -8 0" />
-                    </svg></li>
+                      </svg>
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-code" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <polyline points="7 8 3 12 7 16" />
+                            <polyline points="17 8 21 12 17 16" />
+                            <line x1="14" y1="4" x2="10" y2="20" />
+                        </svg>
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-at" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <circle cx="12" cy="12" r="4" />
+                            <path d="M16 12v1.5a2.5 2.5 0 0 0 5 0v-1.5a9 9 0 1 0 -5.5 8.28" />
+                        </svg>
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-certificate" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <circle cx="15" cy="15" r="3" />
+                            <path d="M13 17.5v4.5l2 -1.5l2 1.5v-4.5" />
+                            <path d="M10 19h-5a2 2 0 0 1 -2 -2v-10c0 -1.1 .9 -2 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -1 1.73" />
+                            <line x1="6" y1="9" x2="18" y2="9" />
+                            <line x1="6" y1="12" x2="9" y2="12" />
+                            <line x1="6" y1="15" x2="8" y2="15" />
+                        </svg>
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <path d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" />
+                            <circle cx="12" cy="12" r="3" />
+                          </svg>
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <circle cx="12" cy="7" r="4" />
+                            <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
+                          </svg>
+                    </li>
                 </ul>
             </nav>
         </header>
         <div class="pagebody">
-            <h2> Homepage</h2>
-            <h6>Hi!</h6>
-            <button id="user">Change username</button>
-            <p>This is the first version of my website.</p>
-            <p class="class1">It's made with:</p>
-            <ol>
-                <li>HTML</li>
-                <li>Css</li>
-                <li>Javascript</li>
-            </ol>
-            <p class="class1">I learned from <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics" target="_blank">this</a> tutorial</p>
-            
+            <div class="home">
+                <svg id="home" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-smart-home" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#0F0F0F" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M19 8.71l-5.333 -4.148a2.666 2.666 0 0 0 -3.274 0l-5.334 4.148a2.665 2.665 0 0 0 -1.029 2.105v7.2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-7.2c0 -.823 -.38 -1.6 -1.03 -2.105" />
+                </svg>
+            </div>
         </div>
         <script src="scripts/main.js"></script>
     </body>
