--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-        <title>My first site</title>
+        <title>Andorhub</title>
     </head>
     <body>
         <header>
@@ -16,28 +16,26 @@
                 <ul>
                     <li class="title"><strong>ANDOR PROJECT</strong></li>
                     <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-smart-home" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M19 8.71l-5.333 -4.148a2.666 2.666 0 0 0 -3.274 0l-5.334 4.148a2.665 2.665 0 0 0 -1.029 2.105v7.2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-7.2c0 -.823 -.38 -1.6 -1.03 -2.105" />
-                      </svg>
-                    </li>
-                    <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-code" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <polyline points="7 8 3 12 7 16" />
-                            <polyline points="17 8 21 12 17 16" />
-                            <line x1="14" y1="4" x2="10" y2="20" />
+                        <a href="#home" >
+                        <svg class="selector" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-smart-home" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                          <path d="M19 8.71l-5.333 -4.148a2.666 2.666 0 0 0 -3.274 0l-5.334 4.148a2.665 2.665 0 0 0 -1.029 2.105v7.2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-7.2c0 -.823 -.38 -1.6 -1.03 -2.105" />
                         </svg>
+                      </a>
                     </li>
                     <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-at" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <circle cx="12" cy="12" r="4" />
-                            <path d="M16 12v1.5a2.5 2.5 0 0 0 5 0v-1.5a9 9 0 1 0 -5.5 8.28" />
-                        </svg>
+                        <a href="#projects">
+                            <svg class="selector" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-code" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <polyline points="7 8 3 12 7 16" />
+                                <polyline points="17 8 21 12 17 16" />
+                                <line x1="14" y1="4" x2="10" y2="20" />
+                            </svg>
+                        </a>
                     </li>
+                    
                     <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-certificate" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <svg class="selector" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-certificate" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <circle cx="15" cy="15" r="3" />
                             <path d="M13 17.5v4.5l2 -1.5l2 1.5v-4.5" />
@@ -48,14 +46,21 @@
                         </svg>
                     </li>
                     <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <svg class="selector" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-at" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <circle cx="12" cy="12" r="4" />
+                            <path d="M16 12v1.5a2.5 2.5 0 0 0 5 0v-1.5a9 9 0 1 0 -5.5 8.28" />
+                        </svg>
+                    </li>
+                    <li>
+                        <svg class="selector" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" />
                             <circle cx="12" cy="12" r="3" />
                           </svg>
                     </li>
                     <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <svg class="selector" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#f0f0f0" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <circle cx="12" cy="7" r="4" />
                             <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
@@ -64,12 +69,31 @@
                 </ul>
             </nav>
         </header>
-        <div class="pagebody">
-            <div class="home">
-                <svg id="home" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-smart-home" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#0F0F0F" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <div class="pagebody" id="home">
+            <div class="sezione" >
+                <h1 >Home</h1>
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-smart-home" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#0F0F0F" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M19 8.71l-5.333 -4.148a2.666 2.666 0 0 0 -3.274 0l-5.334 4.148a2.665 2.665 0 0 0 -1.029 2.105v7.2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-7.2c0 -.823 -.38 -1.6 -1.03 -2.105" />
                 </svg>
+                <p>bo qua ci va scritta la cosa presentativa iniziale si esatto hai capito bella cerco di scrivere un po cosi poi lo stilo o come si dice si gia ue dkdsdfnsjd sdfskdfs fsj fs fajdnf asfjf sfrf asfowe fawefsadf aefas fawfwaejf afnapif sdfaw fjl alf alo dale sfa eif</p>
+            </div>
+            <div class="sezione" id="projects">
+                <h1>Projects</h1>
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-code" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#0F0F0F" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <polyline points="7 8 3 12 7 16" />
+                    <polyline points="17 8 21 12 17 16" />
+                    <line x1="14" y1="4" x2="10" y2="20" />
+                </svg>
+                <div class="pcard">
+                    <p>ciao</p>
+                </div>
+                <div class="emptycard"></div>
+                <div class="pcard">
+                    <p>hello</p>
+                </div>
+                <div class="emptycard"></div>
             </div>
         </div>
         <script src="scripts/main.js"></script>
